--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+  <header>
+    <div class="header-left">
+    </div>
+    <div class="header-right">
+        <ul class="nav">
+            <li><a href="#programming">Programming</a></li>
+            <li><a href="#english">English</a></li>
+        </ul>
+    </div>
+  </header>
 </body>
 </html>
